package eapli.elearning.postitmanagement.application;

import eapli.elearning.sharedboardmanagement.domain.SharedBoard;

public interface UndoChangeController {
    public String undoChange(SharedBoard sharedBoard);
}
